src/pages/index.css
/* border box reset from css-tricks.com */
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}
/* import fonts from typekit */
  @import url("https://use.typekit.net/dmm0zjq.css");
/* my styles */
body{
    margin: 0;
}
#background-div{
    width: 100vw;
    height: 100vh;
    margin: 0;
    position: fixed;
    top: 0;
    left: 0;
}

#button-div{
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 2rem;
    z-index: 100;

}
button{
    z-index: 100;
    position: absolute;
    top: 1em;
    left: 50%;
    transform: translateX(-50%);
}

.none {
    background-color: none;
}
    .none #content-div {
        padding: 6em 3em;
    }

.mod #background-div{
    z-index: -1;
    background-color: rgb(41, 42, 49);
}
    .mod #content-div{
        z-index: 2;
    }

    .mod h1 {
        color: rgb(233, 208, 65);
        z-index: -1;
        font-family: blenny, sans-serif;
        font-style: normal;
        font-weight: 900;
        position: fixed;
        font-size: 25vw;
    }
    .mod #firstname {
        line-height: 1em;
        position: fixed;
        top:50vh;
        transform: translateY(-22vw);
        left:4.5vw;
    }
    .mod #lastname {
        line-height: 1em;
        position: fixed;
        top:50vh;
        transform: translateY(-2vw);
        right:4.5vw;
    }
    .mod #main-text {
        font-family: all-round-gothic, sans-serif;
        font-weight: 500;
        font-style: normal;
        padding: .5em;
        font-size: 2em;
        z-index: 2;
        margin: 100vh 0 0 0;
        padding-top: 25vh;
        background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgb(240, 161, 161, .4) 15%, rgb(240, 161, 161, .9) 25%, rgb(240, 106, 65) 100%);
        color: rgb(251, 220, 42);

    }
    .mod #last-paragraph {
        margin-bottom: 0;
    }
    .mod a{
        color: rgb(253, 231, 106);
        text-decoration: none;
    }

.sporty #background-div{
    z-index: -1;
    background-color: rgb(37, 85, 230);
}
    .sporty #content-div{
        z-index: 2;
    }

    .sporty h1 {
        color: rgb(238, 241, 241);
        text-shadow: 2px 2px 16px rgb(89, 98, 98);
        transform: rotate(-90deg);
        z-index: -1;
        font-family: sneakers-script, sans-serif;
        font-size: 13vh;
        position: fixed;
        width: 100vh;
        top: 32vh;
        left: -43vh;
    }
    .sporty #main-text {
        font-family: letter-gothic-std, monospace; 
        font-weight: 900;
        line-height: 1.6em;
        padding: .5em;
        font-size: 1em;
        z-index: 2;
        margin: 5vh 10vh 10vh 20vh;
        color: rgb(230, 230, 238);
    }
    .sporty p {
        margin: 2em 0;
    }
    .sporty p:hover {
        background-color: rgba(205, 216, 216, 0.6);
        color: white;
    }
    .sporty #last-paragraph {
        margin-bottom: 0;
    }
    .sporty a{
        color: rgb(255, 255, 255);
        text-decoration: none;
    }

    .sporty a:hover{
        text-decoration: underline;
    }
.metal #background-div{
    z-index: -1;
    background-color: rgb(226, 198, 250);
}
    .metal #content-div{
        z-index: 2;
        text-align: center;
    }

    .metal h1 {
        color: rgb(60, 127, 138);
        text-shadow: 1vw .8vw rgb(186, 233, 206);
        text-transform: lowercase;
        font-family: amador, sans-serif; 
        font-size: 40vw;
        position: fixed;
    }
    .metal #firstname {
        background-color: rgb(226, 198, 250);
        padding: 0;
        position: fixed;
        top: -12vw;
        left:-6vw;
        width: 120vw;
        height: 40vw;

        letter-spacing: 8.5vw;
    }
    .metal #lastname {    
        background-color: rgb(226, 198, 250);
        padding: 0 0 .5em 0;
        position: fixed;
        bottom: -8vw;
        left:-3vw;
        width: 120vw;
        height: 40vw;
        letter-spacing: 14vw;
        line-height: .5em;
    }
        @media screen and (min-width: 860px) {
            .metal h1 {
                color: rgb(60, 127, 138);
                text-shadow: 1vw .8vw rgb(186, 233, 206);
                text-transform: lowercase;
                font-family: amador, sans-serif; 
                font-size: 20vw;
                position: fixed;
            }
            .metal #firstname {
                padding: 0;
                position: fixed;
                top: -4vw;
                left:-5vw;
                width: 120vw;
                height: 20vw;
                letter-spacing: 12vw;
            }
            .metal #lastname {    
                padding: 0 0 .5em 0;
                position: fixed;
                bottom: -4vw;
                left:-1.5vw;
                width: 120vw;
                height: 20vw;
                letter-spacing: 18vw;
                line-height: .5em;
            }
        }
    .metal #main-text {
        font-family: park-lane, serif;
        font-weight: 300;
        line-height: 1.6em;
        padding: .5em;
        font-size: 1.5em;
        z-index: 2;
        margin: 30vw 5vh 5vh 5vh;
        color: rgb(88, 88, 88);
    } 
    .metal p {
        margin: 8em 0;
    }
    .metal #last-paragraph {
        margin-bottom: 48vh;
    }
    .metal a{
        color: rgb(67, 70, 73);
        text-decoration: none;
    }
    .metal a:hover{
        text-decoration: underline;
    }

.rose-code #background-div{
    z-index: -1;
    background-color: rgb(3, 40, 44);
}
    .rose-code #content-div{
        font-family: ocr-a-std, monospace; 
        position: fixed;
        background-color: rgb(231, 20, 150);
        overflow-y: scroll;
        overflow-x: hidden;
        width: 55vw;
        height: 55vh;
        top: 10vh;
        left: 8vw;
    }
    .rose-code h1 {
        /* border: 2px solid green; */
        text-align: right;
        color: rgb(231, 20, 150);
        z-index: -1;
        font-size: 8vh;
        position: fixed;
        width: 100vw;
        left: 0;
        bottom: 0;
        margin: 0;
        padding: 0 10vw 10vw 0;
    }
    /* @media screen and (max-width: 560px) {
        .rose-code h1 {
        font-size: 6vh;
        }
    } */

    /* .rose-code #firstname {
        position: fixed;
        top: 70vh;
        right:10vw;
    }
     .rose-code #lastname {
        position: fixed;
        top: 80vh;
        right:10vw;
    } */

    .rose-code #main-text {
        width: 90%;
        position: absolute;
        line-height: 1.6em;
        padding: 0 4vw 2vh 0;
        font-size: .8em;
        z-index: 2;
        margin: 0 0 2vh 3vh;
        color: white;
    }
    .rose-code p {
        margin: 2em 0;
        /* float: left; */
    }
    .rose-code #last-paragraph {
        margin-bottom: 0;
    }
    .rose-code a{
        color: rgb(3, 40, 44);
        text-decoration: none;
    }

    .rose-code a:hover{
        text-decoration: underline;
    }
.modern #background-div{
    background-color: rgb(245, 245, 245);
    width: 300vw;
    z-index: -1;
}
    .modern h1 {
        position: fixed;
        top:0;
        left:0;
        padding-top: 14vw;
        /* border: 2px solid green; */
        font-family: franklin-gothic-urw, sans-serif;
        font-weight: 900;
        letter-spacing: -.6vw;
        font-size: 12vw;
        padding-left: 2vw;
        color: #333;
    }
    .modern #content-div {
        margin-top: 34vw;
    }
    .modern #main-text {
        font-family: franklin-gothic-urw, sans-serif;
        font-size: 3.2vh;
        line-height: 1.2em;
        padding-left: 30vw;
        z-index: 2;
        width: 300vw;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        overflow-x: auto;
        color: #333;
        /* border: 2px solid green; */
    }
    .modern p {
        /* border: 2px solid red; */
        height: 50vh;
        width: 40vw;
        min-width: 200px;
        display: inline-grid;
        margin: 0;
        padding: 1em 1.7em;
        position: relative;
    }
    .modern a{
        color: rgb(0, 0, 255);
        text-decoration: none;
        position: absolute;
        left: 1.8em;
        top: 2.1em;
    }
    .modern a:hover{
        font-weight: bold;
    }
.pop #background-div{
    background-color:rgb(241, 15, 46);
    height: 200vh;
    z-index: -1;
}
    .pop #content-div {
        background-color: rgb(248, 232, 198);
        width: 55vw;
        margin: 35vw 5vw 20vw 40vw;
        border: 3vw double rgb(241, 15, 46);
        padding: 1vw;
        background-color: rgb(255, 193, 22);
    }
    .pop h1 {
        color: rgb(255, 193, 22);
        background-color:rgb(95, 25, 7);
        border: 5vw double rgb(241, 15, 46);
        position: fixed;
        top:4vh;
        left: -6vw;
        height: 120vh;
        width: 40vw;
        text-align: center;
        font-size: 10vw;
        padding-left: 4vw;
        padding-top: 2vh;
        line-height: .9em;
        font-family: hoosier-daddy, sans-serif;
        margin: 0;
    z-index: -1;
    }
    .pop #main-text {
        z-index: 3;
        font-size: 2vw;
        font-family: los-feliz, serif; 
        font-weight: 100;
        color: rgb(95, 25, 7);
        border: 3vw double rgb(241, 11, 61);
        margin: 0;
        padding: 1em;
    }
    .pop a{
        color: inherit;
    }
    @media screen and (max-width: 560px) {
        .pop #main-text {
        font-size: 2.5vh;
        }
        .pop #content-div{
            width: 85vw;
            margin: 45vw 5vw 20vw 23vw;
        }
    }
@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
.screen #background-div{
    background-color:rgb(0, 35, 105);
    height: 200vh;
    z-index: -1;
}
    .screen #content-div {
        width: 100vw;
        margin-top: 16vh;
        overflow: hidden;
        font-size: 3vh;
        font-family: 'Press Start 2P', cursive;
        padding-left: 1em;
    }
    .screen h1 {
        font-size: 3vh;
        position: fixed;
        top: 2vh;
        right: 5vw;
        display: inline-block;
        width: 100vw;
        text-align: right;
        color: rgb(202, 219, 252);
    }
    .screen p {
        font-size: 2vh;
        color: rgb(120, 121, 64);
        color:rgb(27, 63, 136);
        width: 2000vw;
        overflow: hidden;
        transition: transform 80s, color 1s;
        transition-timing-function: linear;
        margin-top: 10vh;
    }
    .screen p:hover {
        color: rgb(218, 255, 108);
        text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.6);
        font-weight: bold;
        position: relative;
        transform: translateX(-500em);
    }
    .screen #github:hover, .screen #last-paragraph:hover{
        color: rgb(218, 255, 108);
        text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.6);
        font-weight: bold;
        position: relative;
        transform: translateX(0%);
    }
        @media screen and (max-width: 560px) {
        .screen h1 {
        text-align: center;
        top: 2em;
        right: 0;
        }
        .screen #last-paragraph{
        transition: transform 5s, color 1s;
        transition-timing-function: linear;
        }
        .screen #last-paragraph:hover{
        transform: translateX(-50vw);
        }
    }

